force-app/main/default/objects/Exl_Restriction__c/Exl_Restriction__c.object-meta.xml
<CustomObject>
    <label>Restriction</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Restriction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restrictions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>