force-app/main/default/objects/Exl_Restriction__c/fields/Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirms acknowledgment from enforcement system.</description>
    <label>Acknowledged</label>
    <type>Checkbox</type>
</CustomField>