force-app/main/default/objects/Exl_Restriction__c/fields/Acknowledgement_Date__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Date__c</fullName>
    <description>Timestamp of enforcement acknowledgment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Acknowledgement Date</label>
    <type>DateTime</type>
</CustomField>