force-app/main/default/objects/Exl_Restriction__c/fields/Active_Non_Gaming_Exc_Junction_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Non_Gaming_Exc_Junction_Count__c</fullName>
    <description>Gives the count of active exclusions for non gaming restrictions</description>
    <label>Active Non-Gaming Exc Junction Count</label>
    <summaryFilterItems>
        <field>Exl_ExclusionRestrictionJunc__c.Enforcement_Scope__c</field>
        <operation>equals</operation>
        <value>Gaming</value>
    </summaryFilterItems>
    <summaryForeignKey>Exl_ExclusionRestrictionJunc__c.Restriction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>