force-app/main/default/objects/Exl_Restriction__c/fields/All_Exl_Junctions_Count__c.field-meta.xml
<CustomField>
    <fullName>All_Exl_Junctions_Count__c</fullName>
    <description>Get the count of all exclusion restriction junction records (Active + In Active) where exclusion Id != null

- Total &quot;Active/InActive&quot; Exl Exclusion Junctions</description>
    <label>All Gaming Exl Junctions Count</label>
    <summaryFilterItems>
        <field>Exl_ExclusionRestrictionJunc__c.Exclusion_Status__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Exl_ExclusionRestrictionJunc__c.Enforcement_Scope__c</field>
        <operation>equals</operation>
        <value>Gaming</value>
    </summaryFilterItems>
    <summaryForeignKey>Exl_ExclusionRestrictionJunc__c.Restriction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>