force-app/main/default/objects/Exl_Restriction__c/fields/Enforced_By__c.field-meta.xml
<CustomField>
    <fullName>Enforced_By__c</fullName>
    <description>System responsible for enforcing restriction.</description>
    <label>Enforced Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Synkros</fullName>
            </value>
            <value>
                <fullName>NeoFace</fullName>
            </value>
            <value>
                <fullName>PingOne</fullName>
            </value>
            <value>
                <fullName>MDM</fullName>
            </value>
            <value>
                <fullName>SFMC</fullName>
            </value>
            <value>
                <fullName>Smart Button</fullName>
            </value>
            <value>
                <fullName>Star APP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>