force-app/main/default/objects/Exl_Restriction__c/fields/Enforcement_Description__c.field-meta.xml
<CustomField>
    <fullName>Enforcement_Description__c</fullName>
    <description>Narrative explaining what the restriction enforces (e.g., &quot;Tier must be Bronze, Casino Points = 0&quot;).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enforcement Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>