force-app/main/default/objects/Exl_Restriction__c/fields/Enforcement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Enforcement_Notes__c</fullName>
    <description>Additional context for Partial or Overridden statuses.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enforcement Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>