force-app/main/default/objects/Exl_Restriction__c/fields/Inactive_Stop_Code_Junction_Count__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Stop_Code_Junction_Count__c</fullName>
    <description>Get the count of Inactive Stop codes restriction junction records where exclusion Id != null

- Total Inactive Stop Code Exclusion Junctions</description>
    <label>Inactive Gaming Stop Code Junction Count</label>
    <summaryFilterItems>
        <field>Exl_ExclusionRestrictionJunc__c.Exclusion_Status__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Exl_ExclusionRestrictionJunc__c.Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Exl_ExclusionRestrictionJunc__c.Enforcement_Scope__c</field>
        <operation>equals</operation>
        <value>Gaming</value>
    </summaryFilterItems>
    <summaryForeignKey>Exl_ExclusionRestrictionJunc__c.Restriction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>