force-app/main/default/objects/Exl_Restriction__c/fields/Restriction_Junc_Total_count__c.field-meta.xml
<CustomField>
    <fullName>Restriction_Junc_Total_count__c</fullName>
    <description>Get the count of all exclusion restriction junction records (Active + In Active) where exclusion Id != null</description>
    <label>Restriction Junc Total count</label>
    <summaryFilterItems>
        <field>Exl_ExclusionRestrictionJunc__c.Exclusion_Status__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Exl_ExclusionRestrictionJunc__c.Restriction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>