force-app/main/default/objects/Exl_Restriction__c/fields/Restriction_Type__c.field-meta.xml
<CustomField>
    <fullName>Restriction_Type__c</fullName>
    <description>Defines the type of restricted service or benefit.</description>
    <label>Restriction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Funds</fullName>
            </value>
            <value>
                <fullName>Hotel Bookings</fullName>
            </value>
            <value>
                <fullName>Access to Digital Channels</fullName>
            </value>
            <value>
                <fullName>Casino Points</fullName>
            </value>
            <value>
                <fullName>Discounts</fullName>
            </value>
            <value>
                <fullName>Parking benefits</fullName>
            </value>
            <value>
                <fullName>Receive Marketing Communications</fullName>
            </value>
            <value>
                <fullName>Tier Level Lost</fullName>
            </value>
            <value>
                <fullName>Digital Access</fullName>
                <isActive>false</isActive>
                <label>Digital Access</label>
            </value>
            <value>
                <fullName>Draws</fullName>
                <isActive>false</isActive>
                <label>Draws</label>
            </value>
            <value>
                <fullName>Loyalty Points</fullName>
                <isActive>false</isActive>
                <label>Loyalty Points</label>
            </value>
            <value>
                <fullName>Parking</fullName>
                <isActive>false</isActive>
                <label>Parking</label>
            </value>
            <value>
                <fullName>Smart Button</fullName>
                <isActive>false</isActive>
                <label>Smart Button</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>