force-app/main/default/objects/Exl_Restriction__c/fields/Revoked_Exc_Junction_Count__c.field-meta.xml
<CustomField>
    <fullName>Revoked_Exc_Junction_Count__c</fullName>
    <description>Get the count of Revoked exclusion restriction junction records where exclusion Id != null

- Total Revoked Exl Exclusion Junctions</description>
    <label>Revoked Gaming Exc Junction Count</label>
    <summaryFilterItems>
        <field>Exl_ExclusionRestrictionJunc__c.Exclusion_Status__c</field>
        <operation>equals</operation>
        <value>Revoked</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Exl_ExclusionRestrictionJunc__c.Enforcement_Scope__c</field>
        <operation>equals</operation>
        <value>Gaming</value>
    </summaryFilterItems>
    <summaryForeignKey>Exl_ExclusionRestrictionJunc__c.Restriction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>