force-app/main/default/objects/Exl_Restriction__c/fields/Revoked_Non_Gaming_Exc_Junction_Count__c.field-meta.xml
<CustomField>
    <fullName>Revoked_Non_Gaming_Exc_Junction_Count__c</fullName>
    <label>Revoked Non-Gaming Exc Junction Count</label>
    <summaryFilterItems>
        <field>Exl_ExclusionRestrictionJunc__c.Enforcement_Scope__c</field>
        <operation>notEqual</operation>
        <value>Gaming</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Exl_ExclusionRestrictionJunc__c.Exclusion_Status__c</field>
        <operation>equals</operation>
        <value>Revoked</value>
    </summaryFilterItems>
    <summaryForeignKey>Exl_ExclusionRestrictionJunc__c.Restriction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>