force-app/main/default/objects/Exl_Restriction__c/recordTypes/Exl_Restrictions.recordType-meta.xml
<RecordType>
    <fullName>Exl_Restrictions</fullName>
    <active>true</active>
    <description>Used to support all Exl-related Restriction processes for prevention of play framework</description>
    <label>Exl Restrictions</label>
</RecordType>