force-app/main/default/objects/Exl_Restriction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Restriction_Type__c</columns>
    <columns>Enforcement_Status__c</columns>
    <columns>Acknowledgement_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>