force-app/main/default/objects/Exl_Restriction__c/listViews/Informational_Applications.listView-meta.xml
<ListView>
    <fullName>Informational_Applications</fullName>
    <columns>NAME</columns>
    <columns>Restriction_Type__c</columns>
    <columns>Enforcement_Status__c</columns>
    <columns>Acknowledgement_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Enforcement_Status__c</field>
        <operation>equals</operation>
        <value>Not Required</value>
    </filters>
    <label>Informational Applications</label>
</ListView>